--- a/package.json
+++ b/package.json
@@ -2,14 +2,31 @@
   "name": "wbs-client",
   "version": "0.1.0",
   "private": true,
+  "hotReload": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "watch": "vue-cli-service build --mode development --watch"
   },
   "dependencies": {
+    "@bybas/latte-ui": "^1.8.3",
+    "@mdi/font": "^5.1.45",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "js-cookie": "^2.2.1",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "uws": "^100.0.1",
+    "v-model": "0.0.9",
+    "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
+    "vue-router": "^3.1.6",
+    "vue-socket.io": "^3.0.7",
+    "vue-socket.io-extended": "^4.0.1",
+    "vuex": "^3.2.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
